# gofre

./: .gitignore  .gitmodules  README.md  REVIEW.md  deno.json  hatch_build.py  prek.toml  pyproject.toml
.github/workflows/: workflow.yml
examples/: benchmark_all.sh  benchmark_servers.sh
examples/benchmark/: go.mod  pyproject.toml
examples/benchmark/benchmarks/: bench.py
examples/benchmark/cmd/: main.go
examples/benchmark/pkg/math/: math.go
examples/hello/: bench.py  go.mod  pyproject.toml
examples/hello/cmd/: main.go
examples/hello/pkg/core/: core.go
examples/matrix/: go.mod  pyproject.toml
examples/matrix/cmd/: main.go
examples/matrix/pkg/matrix/: matrix.go
examples/webserver/: README.md  go.mod  pyproject.toml  server.py  server_fastapi.py  server_flask.py  server_pure.py  server_pure_go.go
examples/webserver/benchmarks/: README.md  run.sh
examples/webserver/benchmarks/servers/: server_cpython_gohttp.py  server_fastapi.py  server_flask.py  server_pure.py  server_pure_go.go
examples/webserver/cmd/: main.go
examples/webserver/pkg/core/: core.go
goforge/: go.mod  main.go
goforge/cmd/: bench.go  build.go  develop.go  new.go  publish.go  root.go
goforge/examples/webserver_binary/: app.py  go.mod  main.go
goforge/internal/bindings/: generator.go  parser.go  types.go
goforge/internal/config/: config.go
goforge/internal/gomod/http/: cffi_exports.go  register.go
goforge/internal/gomod/json/: cffi_exports.go  register.go
goforge/internal/pocketpy/: bridge.c  pocketpy.c  pocketpy.go  pocketpy_test.go  types.go
goforge/tests/: config_test.go  generator_test.go  go_build_test.go  parser_test.go  types_test.go  wheel_test.go
goforge/tests/testdata/: pyproject.toml  simple.go
goforge_pkg/: __init__.py  __main__.py
gofre/: go.mod  main.go
gofre/cmd/: bench.go  build.go  develop.go  new.go  publish.go  root.go
gofre/examples/webserver_binary/: app_benchmark.py  go.mod  main.go
gofre/internal/bindings/: generator.go
gofre/internal/config/: config.go
gofre/internal/gomod/http/: cffi_exports.go  http.go  register.go
gofre/internal/gomod/json/: json.go  register.go
gofre/internal/gomod/sql/: cffi_exports.go  db.go  gosql.go  models.go  query.sql  query.sql.go  register.go  schema.sql  seed.go  sqlc.yaml
gofre/internal/pocketpy/: pocketpy.go  pocketpy.h  types.go
gofre/tests/: config_test.go  generator_test.go  go_build_test.go  parser_test.go  types_test.go  wheel_test.go
gofre/tests/testdata/: methods.go  no_exports.go  pyproject.toml  slices.go
gofre_pkg/: __init__.py  __main__.py
