[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goforge"
version = "0.1.0"
description = "Build system for creating Python packages that bundle Go binaries"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "GoForge Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Go",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/grackin/goforge"

[project.scripts]
goforge = "goforge_pkg:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["goforge_pkg"]
