[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gofre"
version = "0.1.1"
description = "Build system for creating Python packages that bundle Go binaries."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Go",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/NoRaincheck/gofre"

[project.scripts]
gofre = "gofre_pkg:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["gofre_pkg"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "deno>=0.0.1",
    "pytest>=8.4.2",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]
