[build-system]
requires = ["goforge>=0.1.0"]
build-backend = "goforge.build"

[project]
name = "goforge-benchmark"
version = "0.1.0"
description = "GoForge benchmark suite"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.goforge]
module = "github.com/grackin/examples/benchmark"
bindings = "cffi"
pkg-dir = "pkg/math"
