[build-system]
requires = ["goforge>=0.1.0"]
build-backend = "goforge.build"

[project]
name = "goforge-hello"
version = "0.1.0"
description = "GoForge hello world example"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.goforge]
module = "github.com/grackin/examples/hello"
bindings = "cffi"
pkg-dir = "pkg/core"
