[build-system]
requires = ["gofre>=0.1.0"]
build-backend = "gofre.build"

[project]
name = "gofre-hello"
version = "0.1.0"
description = "GoFre hello world example"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.gofre]
module = "github.com/grackin/examples/hello"
bindings = "cffi"
pkg-dir = "pkg/core"
