[build-system]
requires = ["goforge>=0.1.0"]
build-backend = "goforge.build"

[project]
name = "goforge-matrix"
version = "0.1.0"
description = "GoForge matrix operations example"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.goforge]
module = "github.com/grackin/examples/matrix"
bindings = "cffi"
pkg-dir = "pkg/matrix"
