[build-system]
requires = ["gofre>=0.1.0"]
build-backend = "gofre.build"

[project]
name = "gofre-matrix"
version = "0.1.0"
description = "GoFre matrix operations example"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.gofre]
module = "github.com/grackin/examples/matrix"
bindings = "cffi"
pkg-dir = "pkg/matrix"
