[build-system]
requires = ["goforge>=0.1.0"]
build-backend = "goforge.build"

[project]
name = "goforge-webserver"
version = "0.1.0"
description = "Webserver example using GoForge"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.goforge]
module = "github.com/grackin/examples/webserver"
bindings = "cffi"
pkg-dir = "pkg/core"
