[build-system]
requires = ["gofre>=0.1.0"]
build-backend = "gofre.build"

[project]
name = "gofre-webserver"
version = "0.1.0"
description = "Webserver example using GoFre"
requires-python = ">=3.8"
dependencies = ["cffi>=1.0.0"]

[tool.gofre]
module = "github.com/grackin/examples/webserver"
bindings = "cffi"
pkg-dir = "pkg/core"
